ikiwiki (2.52) UNRELEASED; urgency=low

  * attachment: New plugin for uploading and managing attachments.
    (Sponsored by The TOVA Company.)
  * If attachments are not enabled, configure CGI.pm to disable file
    uploads by default. (An anti-DOS measure.)
  * toggle: Add support for toggles that are open by default.
  * toggle: Fix to work in preview mode.
  * toggle: Add javascript to top of page, not to end. This avoids flicker
    since closed toggles will not be displayed as the page is loading.
  * The editpage form now uses the raw page name, not the page title, in its
    'page' cgi parameter. Using the title was ambiguous and made it
    impossible to tell between some pages, like "foo/bar" and "foo__47__bar",
    sometimes causing the wrong page to be edited.
  * This change means that some edit links need to be updated.
    Force a rebuild on upgrade to this version.
  * Above change also allowed really fixing escaped slashes from the blogpost
    form.

 -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2008 19:56:28 -0400

ikiwiki (2.51) unstable; urgency=low

  * Improve toplevel parentlink to link directly to index.html when usedirs is
    disabled.
  * map: Add a "show" parameter. "show=title" can be used to display page
    titles, rather than the default page name. Based on a patch from 
    Jaldhar H. Vyas, Closes: #484510
  * hnb: New plugin, contributed by Axel Beckert.
  * meta: Store "description" in pagestate for use by other plugins.
  * map: Support show=description.
  * textile: The Text::Textile perl module has some regexps that fail if
    input is flagged as utf-8, but contains invalid characters such as 0x92.
    To prevent it from crashing, re-encode the content before calling it,
    which will ensure that it's really utf-8.
  * Version the suggests of xapian-omega to a version known to be new enough
    to work with ikiwiki. Reportedly, version 0.9.9 is too old to work.
    Closes: #486592